src/objects/agf__QA_FTest__c.object
<CustomObject>
    <fields>
        <fullName>agf__Annotation_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Annotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__FTest_Id__c</fullName>
        <externalId>true</externalId>
        <label>FTest ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Report_Exception__c</fullName>
        <label>Exclude from Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generated Test</fullName>
                </value>
                <value>
                    <fullName>PLSQL Findbugs</fullName>
                </value>
                <value>
                    <fullName>Unit Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scrum Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipName>R00ND0000001rfkHMAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Test_Labels__c</fullName>
        <label>Test Labels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Test_Suite__c</fullName>
        <label>Test Suite</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>basic</fullName>
                    <default>true</default>
                    <label>basic</label>
                </value>
                <value>
                    <fullName>standard</fullName>
                </value>
                <value>
                    <fullName>extended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FTest</label>
    <nameField>
        <displayFormat>FT-{00000000}</displayFormat>
        <label>FTest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>